# pc_filter

./: CMakeLists.txt  README.md  package.xml
include/pc_filter/: PCFilterNode.hpp  pc_filter_lib.hpp
src/: filter_cloud_by_detections.cpp  filter_cloud_by_detections_from_dataset.cpp  offline_pc_filter.cpp  pc_filter_main.cpp
src/pc_filter/: PCFilterNode.cpp  pc_filter_lib.cpp
