<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc_filter</name>
  <version>0.0.0</version>
  <description>Point cloud filter</description>
  <maintainer email="a.galea2022@alumnos.urjc.es">psb</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>


  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>pcl_conversions</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
